resolved alignment issues with the card and the image

--- a/business-card/src/App.css
+++ b/business-card/src/App.css
@@ -29,6 +29,10 @@ a:active {
   min-height: 95vh;
 }
 
+.card--body {
+  background-color: #1A1B21;
+}
+
 .info {
   display: flex;
   flex-direction: column;
@@ -63,7 +67,6 @@ a:active {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #1A1B21;
   padding-bottom: 10px;
   width: 317px;
 }
@@ -119,7 +122,6 @@ a:active {
 .about,
 .interests {
   width: 317px;
-  background-color: #1A1B21;
 }
 
 .about--description,
@@ -183,7 +185,6 @@ a:active {
 @media (prefers-color-scheme: light) {
   .info--container {
     color: #2B283A;
-    background-color: #F5F5F5;
   }
 
   .info--title {
@@ -198,14 +199,13 @@ a:active {
     background-color: #297FE5;
   }
 
-  .about,
-  .interests {
-    background-color: #F5F5F5;
-  }
-
   .about--title,
   .interests--title {
     color: #2B283A
+  }
+
+  .card--body {
+    background-color: #F5F5F5;
   }
 
   .about--description,
